--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: Thoughts on Practical Quantum Chemistry
+email: dbwy@u.washington.edu
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  An accessable view on various topics in the practical implementation
+  of approximate quantum mechanical methods and their application to
+  molecular systems.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: wavefunction91
+github_username:  wavefunction91
 
 # Build settings
 markdown: kramdown
