--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ description: > # this means to ignore newlines until "baseurl:"
         Department of Chemistry,
         University of Washington
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://example.com" # the base hostname & protocol for your site
+url: "http://wavefunction91.github.io" # the base hostname & protocol for your site
 twitter_username: wavefunction91
 github_username:  wavefunction91
 
