--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: David Williams-Young
 email: dbwy@u.washington.edu
 description: > # this means to ignore newlines until "baseurl:"
         David Williams-Young,
-        Graduate Student,
+        Ph.D Candidate,
         Department of Chemistry,
         University of Washington
 baseurl: "" # the subpath of your site, e.g. /blog
