--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@ gpgfgr: "A11E 7248 EF13 C14A 1A8D  85E0 8160 2572 73C4 F947"
 description: > # this means to ignore newlines until "baseurl:"
         David Williams-Young, Ph.D.
         Scalable Solvers Group,
+        Department of Applied Mathematics,
         Computational Research Division,
         Lawrence Berkeley National Lab
 baseurl: "" # the subpath of your site, e.g. /blog
