--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,7 @@ altemail: wavefunction91@gmail.com
 gpgfgr: "A11E 7248 EF13 C14A 1A8D  85E0 8160 2572 73C4 F947"
 description: > # this means to ignore newlines until "baseurl:"
         David Williams-Young, Ph.D.
-        Computational Chemistry, Materials and Climate Group,
-        Department of Computational Science,
+        Applied Computing for Scientific Discovery Group,
         Applied Mathematics and Computational Research Division,
         Lawrence Berkeley National Lab
 baseurl: "" # the subpath of your site, e.g. /blog
